syntax = "proto3";

option go_package = ".;api";

import "google/protobuf/struct.proto";

package api;

service TeamService {
    rpc CreateTeam(CreateTeamRequest) returns (CreateTeamResponse);
    rpc GetTeam(TeamRequest) returns (GetTeamResponse);
    rpc GetTeams(GetTeamsRequest) returns (GetTeamsResponse);
    rpc SearchTeams(SearchTeamsRequest) returns (SearchTeamsResponse);
    rpc UpdateTeam(UpdateTeamRequest) returns (TeamResponse);
    rpc DeleteTeam(TeamRequest) returns (TeamResponse);
    rpc JoinTeam(JoinTeamRequest) returns (JoinTeamResponse);
    rpc LeaveTeam(LeaveTeamRequest) returns (LeaveTeamResponse);
}

message CreateTeamRequest {
    string name = 1;
    uint64 owner = 2;
    repeated uint64 members = 3;
    optional int64 score = 4;
    google.protobuf.Struct data = 5;
}

message CreateTeamResponse {
    bool success = 1;
    string id = 2;
    enum Error {
        NONE = 0;
        OWNER_REQUIRED = 1;
        NAME_TOO_SHORT = 2;
        NAME_TOO_LONG = 3;
        NAME_TAKEN = 4;
        OWNER_TAKEN = 5;
        TOO_MANY_MEMBERS = 6;
        OWNER_ALREADY_IN_TEAM = 7;
        MEMBER_ALREADY_IN_TEAM = 8;
    }
    Error error = 3;
}

message TeamRequest {
    optional string name = 1;
    optional uint64 owner = 2;
    optional uint64 member = 3;
}

message GetTeamResponse {
    bool success = 1;
    Team team = 2;
    enum Error {
        NONE = 0;
        NO_FIELD_SPECIFIED = 1;
        NOT_FOUND = 2;
        NAME_TOO_SHORT = 3;
        NAME_TOO_LONG = 4;
    }
    Error error = 3;
}

message GetTeamsRequest {
    optional uint32 max = 1;
    optional uint64 page = 2;
}

message GetTeamsResponse {
    bool success = 1;
    repeated Team teams = 2;
}

message SearchTeamsRequest {
    string query = 1;
    optional GetTeamsRequest pagination = 2;
}

message SearchTeamsResponse {
    bool success = 1;
    repeated Team teams = 2;
    enum Error {
        NONE = 0;
        QUERY_TOO_SHORT = 1;
        QUERY_TOO_LONG = 2;
    }
    Error error = 3;
}

message UpdateTeamRequest {
    TeamRequest team = 1;
    optional google.protobuf.Struct data = 2;
    optional int64 scoreOffset = 3;
}

message TeamResponse {
    bool success = 1;
    enum Error {
        NONE = 0;
        NO_FIELD_SPECIFIED = 1;
        NOT_FOUND = 2;
        NAME_TOO_SHORT = 3;
        NAME_TOO_LONG = 4;
    }
    Error error = 2;
}

message JoinTeamRequest {
    TeamRequest team = 1;
    uint64 userId = 2;
}

message JoinTeamResponse {
    bool success = 1;
    enum Error {
        NONE = 0;
        NO_FIELD_SPECIFIED = 1;
        USER_ID_REQUIRED = 2;
        NAME_TOO_SHORT = 3;
        NAME_TOO_LONG = 4;
        NOT_FOUND= 5;
        TEAM_FULL = 6;
        ALREADY_MEMBER = 7;
        IN_ANOTHER_TEAM = 8;
    }
    Error error = 2;
}

message LeaveTeamRequest {
    uint64 userId = 1;
}

message LeaveTeamResponse {
    bool success = 1;
    enum Error {
        NONE = 0;
        USER_ID_REQUIRED = 1;
        NOT_IN_TEAM = 2;
    }
    Error error = 2;
}

message Team {
    string id = 1;
    string name = 2;
    uint64 owner = 3;
    repeated uint64 members = 4;
    int64 score = 5;
    uint64 ranking = 6;
    google.protobuf.Struct data = 7;
    string createdAt = 8;
    string updatedAt = 9;
}